bugfix get user data and generate life test url
